add flyway, add error processing, add server.context-path, add thymeleaf, fix multithreading work